--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-
+ <main>
   <div class="container">
     <div class="content">
       <img id="img" src="assests/image-product-desktop.jpg" alt="">
@@ -34,7 +34,7 @@
         </button>
       </div>
     </div>
-    
+    </main>
   </div>  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
