--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
  <main>
   <div class="container">
     <div class="content">
-      <img id="img" src="assests/image-product-desktop.jpg" alt="">
+      <div class="img-wrapper">
+        <img id="img" src="assests/image-product-desktop.jpg" alt="">
+      </div>
       <div class="right-content">
-        <h4>PERFUME</h4>
+        <h2 class="perfume">PERFUME</h2>
         <h1>Gabrielle Essence Eau De Parfum</h1>
         <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
           Perfumer-Creator for the House of CHANEL.</p>
